[BUG #4826] Workaround Firefox behavior of shrink-wrapping display: box
Set percentage width (100%) and use box-sizing: border-box to fix padding and border being added to width (100% + X).

--- a/framework/source/resource/qx/mobile/css/common/main.less
+++ b/framework/source/resource/qx/mobile/css/common/main.less
@@ -629,6 +629,26 @@ html, body {
         display: box;
         box-orient: horizontal;
         box-align: stretch;
+
+        /*
+         * -moz-box elements shrink-wrap by default. The spec states that "a block-level
+         * box placed inside a block level element is positioned and sized as if it were
+         * any other block". This is not true for the (non-standard) implementation in
+         * Firefox.
+         *
+         * See https://bugzilla.mozilla.org/show_bug.cgi?id=625694
+         *
+         * TODO: Limit to Firefox, because setting an explicit width may have
+         * undesirable side-effects.
+         *
+         */
+         width: 100%;
+
+         /*
+          * Subtract padding and border from content width (100%) to prevent
+          * 100% + X situation.
+          */
+         .box-sizing(border-box);
 }
 
 .hbox> * {
@@ -649,6 +669,9 @@ html, body {
         display: box;
         box-orient: vertical;
         box-align: stretch;
+
+        width: 100%;
+        .box-sizing(border-box);
 }
 
 .vbox> * {
